--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="hero-copy">
                             <h1 class="hero-title h2-mobile mt-0 is-revealing">Working with you towards a better tomorrow</h1>
                             <p class="hero-paragraph is-revealing">Transparency, dignity, and respect – because you know your business, and so do we. That's why we've been a household name since 1994. </p>
-                            <p class="hero-cta is-revealing"><a class="button button-primary button-shadow" href="#">Learn the Avery® story</a></p>
+                            <p class="hero-cta is-revealing"><a class="button button-primary button-shadow" href="http://averymencher.com/story">Learn the Avery® story</a></p>
                         </div>
                         <div class="hero-illustration is-revealing">
                             <svg width="528" height="413" viewBox="0 0 528 413" xmlns="http://www.w3.org/2000/svg">
