--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="footer-copyright">&copy; 2018 Agnes, all rights reserved</div>
+                    <div class="footer-copyright">&copy; 2018 Avery®, all rights reserved</div>
                 </div>
             </div>
         </footer>
