--- a/story/index.html
+++ b/story/index.html
@@ -221,7 +221,7 @@ function showDivs(n) {
                             </a>
                         </li>
                     </ul>
-                    <div class="footer-copyright">&copy; 2018 Agnes, all rights reserved</div>
+                    <div class="footer-copyright">&copy; 2018 Avery®, all rights reserved</div>
                 </div>
             </div>
         </footer>
